CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
SET (CMAKE_C_COMPILER "gcc")
SET (CMAKE_CXX_COMPILER "g++")

CMAKE_POLICY (SET CMP0042 NEW)

PROJECT (LearnedIndex)
# SET (CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra" CACHE INTERNAL "compiler options" FORCE)
SET (CMAKE_CXX_FLAGS "-std=c++11 -mcx16  -Wno-invalid-offsetof -Wno-deprecated-register" CACHE INTERNAL "compiler options" FORCE)
SET (CMAKE_CXX_FLAGS_DEBUG "-O0 -g" CACHE INTERNAL "compiler options" FORCE)
SET (CMAKE_CXX_FLAGS_RELEASE "-O3" CACHE INTERNAL "compiler options" FORCE)
IF (NOT CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE "Release")
ENDIF ()
MESSAGE (STATUS "Build type: ${CMAKE_BUILD_TYPE}")

SET (CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src)

# include googletest
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/third_party/googletest/googletest/include)


LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/build/src)

ADD_SUBDIRECTORY(third_party)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
